--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ NEXT_PUBLIC_CONVEX_URL=
 NEXT_PUBLIC_CLERK_FRONTEND_API_URL=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+CLERK_WEBHOOK_SECRET=
