--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "2.9.1",
     "@clerk/nextjs": "6.31.1",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
@@ -21,6 +22,7 @@
     "next-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "svix": "1.73.0",
     "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
