--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "convex": "1.25.4",
+    "convex-helpers": "0.1.104",
     "lucide-react": "0.539.0",
     "next": "15.4.6",
     "next-themes": "0.4.6",
