--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/backend": "2.9.1",
-    "@clerk/nextjs": "6.31.1",
+    "@clerk/backend": "2.9.2",
+    "@clerk/nextjs": "6.31.2",
+    "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "convex": "1.25.4",
     "convex-helpers": "0.1.104",
-    "lucide-react": "0.539.0",
+    "date-fns": "4.1.0",
+    "lucide-react": "0.540.0",
     "next": "15.4.6",
     "next-themes": "0.4.6",
     "react": "19.1.1",
