--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/backend": "2.9.2",
-    "@clerk/nextjs": "6.31.2",
+    "@clerk/backend": "2.9.3",
+    "@clerk/nextjs": "6.31.3",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
@@ -21,14 +21,16 @@
     "convex-helpers": "0.1.104",
     "date-fns": "4.1.0",
     "lucide-react": "0.540.0",
-    "next": "15.4.6",
+    "next": "15.4.7",
     "next-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-pdf": "10.1.0",
     "react-resizable-panels": "3.0.4",
     "sonner": "2.0.7",
     "svix": "1.73.0",
-    "tailwind-merge": "3.3.1"
+    "tailwind-merge": "3.3.1",
+    "usehooks-ts": "3.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
@@ -38,7 +40,7 @@
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
     "eslint": "9.33.0",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "15.4.7",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
     "tailwindcss": "4.1.12",
