--- a/package.json
+++ b/package.json
@@ -10,16 +10,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "2.0.19",
+    "@ai-sdk/react": "2.0.21",
     "@clerk/backend": "2.9.4",
     "@clerk/nextjs": "6.31.4",
+    "@convex-dev/agent": "0.2.4",
+    "@convex-dev/rag": "0.5.2",
     "@radix-ui/react-alert-dialog": "1.1.15",
+    "@radix-ui/react-avatar": "1.1.10",
+    "@radix-ui/react-collapsible": "1.1.12",
     "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-hover-card": "1.1.15",
+    "@radix-ui/react-scroll-area": "1.2.10",
+    "@radix-ui/react-select": "2.2.6",
     "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-tooltip": "1.2.8",
+    "@radix-ui/react-use-controllable-state": "1.2.2",
+    "ai": "5.0.21",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "convex": "1.25.4",
     "convex-helpers": "0.1.104",
     "date-fns": "4.1.0",
+    "embla-carousel-react": "8.6.0",
     "lucide-react": "0.540.0",
     "next": "15.5.0",
     "next-themes": "0.4.6",
@@ -27,10 +40,14 @@
     "react-dom": "19.1.1",
     "react-pdf": "10.1.0",
     "react-resizable-panels": "3.0.4",
+    "react-syntax-highlighter": "15.6.1",
     "sonner": "2.0.7",
+    "streamdown": "1.0.12",
     "svix": "1.74.1",
     "tailwind-merge": "3.3.1",
-    "usehooks-ts": "3.1.1"
+    "use-stick-to-bottom": "1.1.1",
+    "usehooks-ts": "3.1.1",
+    "zod": "4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
@@ -39,6 +56,7 @@
     "@types/node": "22.17.1",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
+    "@types/react-syntax-highlighter": "15.5.13",
     "eslint": "9.33.0",
     "eslint-config-next": "15.5.0",
     "prettier": "3.6.2",
