--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.22",
-    "@ai-sdk/react": "2.0.26",
-    "@clerk/backend": "2.10.0",
-    "@clerk/nextjs": "6.31.5",
+    "@ai-sdk/openai": "2.0.23",
+    "@ai-sdk/react": "2.0.28",
+    "@clerk/backend": "2.10.1",
+    "@clerk/nextjs": "6.31.6",
     "@convex-dev/agent": "0.2.5",
     "@convex-dev/rag": "0.5.2",
     "@radix-ui/react-alert-dialog": "1.1.15",
@@ -27,10 +27,10 @@
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tooltip": "1.2.8",
     "@radix-ui/react-use-controllable-state": "1.2.2",
-    "ai": "5.0.26",
+    "ai": "5.0.28",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "convex": "1.26.1",
+    "convex": "1.26.2",
     "convex-helpers": "0.1.104",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
@@ -38,25 +38,26 @@
     "next": "15.5.2",
     "next-themes": "0.4.6",
     "react": "19.1.1",
+    "react-confetti": "6.4.0",
     "react-dom": "19.1.1",
     "react-pdf": "10.1.0",
     "react-resizable-panels": "3.0.5",
     "react-syntax-highlighter": "15.6.6",
     "sonner": "2.0.7",
-    "streamdown": "1.1.4",
+    "streamdown": "1.1.6",
     "svix": "1.75.0",
     "tailwind-merge": "3.3.1",
     "use-stick-to-bottom": "1.1.1",
     "usehooks-ts": "3.1.1",
-    "zod": "4.1.3"
+    "zod": "4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
-    "@ianvs/prettier-plugin-sort-imports": "4.6.3",
+    "@ianvs/prettier-plugin-sort-imports": "4.7.0",
     "@tailwindcss/postcss": "4.1.12",
     "@types/node": "22.18.0",
     "@types/react": "19.1.12",
-    "@types/react-dom": "19.1.8",
+    "@types/react-dom": "19.1.9",
     "@types/react-syntax-highlighter": "15.5.13",
     "eslint": "9.34.0",
     "eslint-config-next": "15.5.2",
